--- a/index.html
+++ b/index.html
@@ -1,42 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Intro component with sign up form</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="./public/styles.css">
 </head>
-<body>
+<body background="./public/bgImg.png">
+    <div class="flex justify-center items-center w-1/2 mx-auto h-screen">
+        <div class='justify-start w-1/2 mr-6'>
+            <h1 class='text-white text-6xl mb-6'>Learn to code by watching others</h1>
+            <h1 class='text-white text-xl text-opacity-80'>
+                See how experienced developers solve problems in real time.Seeing tutorials is great but 
+                it is important to see how legends do it
+            </h1>
+        </div>
+        <div class="flex flex-col justify-center w-1/2 ">
+            <div class='flex bg-purple-800 w-auto h-auto py-4 px-4 justify-center rounded-xl shadow-md mb-8'>
+                <span class="inline-block text-white align-top text-center text-opacity-90">
+                    <h1 class='inline-block font-bold'>
+                        Try it free 7 days
+                    </h1>
+                        then pay $20/mo
+                </span>
+            </div>
+            <div class="flex bg-white w-auto h-auto py-4 px-4 justify-center rounded-xl shadow-md">
+                <form action="POST" class="flex flex-col items-center w-full p-2">
+                    <input type="text" placeholder="First Name" class="mb-4 border-gray-300 border-2 rounded p-4 w-full">
+                    <input type="text" placeholder="Last Name" class="mb-4 border-gray-300 border-2 rounded p-4 w-full">
+                    <input type="text" placeholder="Email" class="mb-4 border-gray-300 border-2 rounded p-4 w-full">
+                    <input type="text" placeholder="Password" class="mb-4 border-gray-300 border-2 rounded p-4 w-full">
+                    <button type="submit" value="submit" class='bg-green-400 rounded p-2 font-semibold text-white align-center'>
+                        CLAIM YOUR FREE TRIAL
+                    </button>
+                </form>
+            </div>
 
-  Learn to code by watching others
-
-  See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
-  but understanding how developers think is invaluable. 
-
-  Try it free 7 days then $20/mo. thereafter
-
-  First Name 
-  Last Name 
-  Email Address
-  Password
-
-  Claim your free trial 
-
-  By clicking the button, you are agreeing to our Terms and Services
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
+        </div>
+    </div>
 </body>
 </html>
+
+
